fnhdr.output
Grammar

    0 $accept: Header $end

    1 OpenList: NAMEUNK
    2         | OpenList NAMEUNK

    3 List: '(' OpenList ')'

    4 Result: List ASSIGN
    5       | NAMEUNK ASSIGN

    6 LftArg: List
    7       | '[' List ']'
    8       | '[' NAMEUNK ']'

    9 NoResHdr: NAMEUNK
   10         | NAMEUNK NAMEUNK
   11         | NAMEUNK List
   12         | NAMEUNK NAMEUNK NAMEUNK
   13         | NAMEUNK NAMEUNK List
   14         | LftArg NAMEUNK NAMEUNK
   15         | LftArg NAMEUNK List

   16 Header: NoResHdr
   17       | Result NoResHdr


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3
')' (41) 3
'[' (91) 7 8
']' (93) 7 8
error (256)
NAMEUNK (258) 1 2 5 8 9 10 11 12 13 14 15
ASSIGN (259) 4 5


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
OpenList (10)
    on left: 1 2, on right: 2 3
List (11)
    on left: 3, on right: 4 6 7 11 13 15
Result (12)
    on left: 4 5, on right: 17
LftArg (13)
    on left: 6 7 8, on right: 14 15
NoResHdr (14)
    on left: 9 10 11 12 13 14 15, on right: 16 17
Header (15)
    on left: 16 17, on right: 0


state 0

    0 $accept: . Header $end
    3 List: . '(' OpenList ')'
    4 Result: . List ASSIGN
    5       | . NAMEUNK ASSIGN
    6 LftArg: . List
    7       | . '[' List ']'
    8       | . '[' NAMEUNK ']'
    9 NoResHdr: . NAMEUNK
   10         | . NAMEUNK NAMEUNK
   11         | . NAMEUNK List
   12         | . NAMEUNK NAMEUNK NAMEUNK
   13         | . NAMEUNK NAMEUNK List
   14         | . LftArg NAMEUNK NAMEUNK
   15         | . LftArg NAMEUNK List
   16 Header: . NoResHdr
   17       | . Result NoResHdr

    NAMEUNK  shift, and go to state 1
    '('      shift, and go to state 2
    '['      shift, and go to state 3

    List      go to state 4
    Result    go to state 5
    LftArg    go to state 6
    NoResHdr  go to state 7
    Header    go to state 8


state 1

    3 List: . '(' OpenList ')'
    5 Result: NAMEUNK . ASSIGN
    9 NoResHdr: NAMEUNK .  [$end]
   10         | NAMEUNK . NAMEUNK
   11         | NAMEUNK . List
   12         | NAMEUNK . NAMEUNK NAMEUNK
   13         | NAMEUNK . NAMEUNK List

    NAMEUNK  shift, and go to state 9
    ASSIGN   shift, and go to state 10
    '('      shift, and go to state 2

    $default  reduce using rule 9 (NoResHdr)

    List  go to state 11


state 2

    1 OpenList: . NAMEUNK
    2         | . OpenList NAMEUNK
    3 List: '(' . OpenList ')'

    NAMEUNK  shift, and go to state 12

    OpenList  go to state 13


state 3

    3 List: . '(' OpenList ')'
    7 LftArg: '[' . List ']'
    8       | '[' . NAMEUNK ']'

    NAMEUNK  shift, and go to state 14
    '('      shift, and go to state 2

    List  go to state 15


state 4

    4 Result: List . ASSIGN
    6 LftArg: List .  [NAMEUNK]

    ASSIGN  shift, and go to state 16

    $default  reduce using rule 6 (LftArg)


state 5

    3 List: . '(' OpenList ')'
    6 LftArg: . List
    7       | . '[' List ']'
    8       | . '[' NAMEUNK ']'
    9 NoResHdr: . NAMEUNK
   10         | . NAMEUNK NAMEUNK
   11         | . NAMEUNK List
   12         | . NAMEUNK NAMEUNK NAMEUNK
   13         | . NAMEUNK NAMEUNK List
   14         | . LftArg NAMEUNK NAMEUNK
   15         | . LftArg NAMEUNK List
   17 Header: Result . NoResHdr

    NAMEUNK  shift, and go to state 17
    '('      shift, and go to state 2
    '['      shift, and go to state 3

    List      go to state 18
    LftArg    go to state 6
    NoResHdr  go to state 19


state 6

   14 NoResHdr: LftArg . NAMEUNK NAMEUNK
   15         | LftArg . NAMEUNK List

    NAMEUNK  shift, and go to state 20


state 7

   16 Header: NoResHdr .

    $default  reduce using rule 16 (Header)


state 8

    0 $accept: Header . $end

    $end  shift, and go to state 21


state 9

    3 List: . '(' OpenList ')'
   10 NoResHdr: NAMEUNK NAMEUNK .  [$end]
   12         | NAMEUNK NAMEUNK . NAMEUNK
   13         | NAMEUNK NAMEUNK . List

    NAMEUNK  shift, and go to state 22
    '('      shift, and go to state 2

    $default  reduce using rule 10 (NoResHdr)

    List  go to state 23


state 10

    5 Result: NAMEUNK ASSIGN .

    $default  reduce using rule 5 (Result)


state 11

   11 NoResHdr: NAMEUNK List .

    $default  reduce using rule 11 (NoResHdr)


state 12

    1 OpenList: NAMEUNK .

    $default  reduce using rule 1 (OpenList)


state 13

    2 OpenList: OpenList . NAMEUNK
    3 List: '(' OpenList . ')'

    NAMEUNK  shift, and go to state 24
    ')'      shift, and go to state 25


state 14

    8 LftArg: '[' NAMEUNK . ']'

    ']'  shift, and go to state 26


state 15

    7 LftArg: '[' List . ']'

    ']'  shift, and go to state 27


state 16

    4 Result: List ASSIGN .

    $default  reduce using rule 4 (Result)


state 17

    3 List: . '(' OpenList ')'
    9 NoResHdr: NAMEUNK .  [$end]
   10         | NAMEUNK . NAMEUNK
   11         | NAMEUNK . List
   12         | NAMEUNK . NAMEUNK NAMEUNK
   13         | NAMEUNK . NAMEUNK List

    NAMEUNK  shift, and go to state 9
    '('      shift, and go to state 2

    $default  reduce using rule 9 (NoResHdr)

    List  go to state 11


state 18

    6 LftArg: List .

    $default  reduce using rule 6 (LftArg)


state 19

   17 Header: Result NoResHdr .

    $default  reduce using rule 17 (Header)


state 20

    3 List: . '(' OpenList ')'
   14 NoResHdr: LftArg NAMEUNK . NAMEUNK
   15         | LftArg NAMEUNK . List

    NAMEUNK  shift, and go to state 28
    '('      shift, and go to state 2

    List  go to state 29


state 21

    0 $accept: Header $end .

    $default  accept


state 22

   12 NoResHdr: NAMEUNK NAMEUNK NAMEUNK .

    $default  reduce using rule 12 (NoResHdr)


state 23

   13 NoResHdr: NAMEUNK NAMEUNK List .

    $default  reduce using rule 13 (NoResHdr)


state 24

    2 OpenList: OpenList NAMEUNK .

    $default  reduce using rule 2 (OpenList)


state 25

    3 List: '(' OpenList ')' .

    $default  reduce using rule 3 (List)


state 26

    8 LftArg: '[' NAMEUNK ']' .

    $default  reduce using rule 8 (LftArg)


state 27

    7 LftArg: '[' List ']' .

    $default  reduce using rule 7 (LftArg)


state 28

   14 NoResHdr: LftArg NAMEUNK NAMEUNK .

    $default  reduce using rule 14 (NoResHdr)


state 29

   15 NoResHdr: LftArg NAMEUNK List .

    $default  reduce using rule 15 (NoResHdr)
